--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next": "16.1.1",
     "next-auth": "^4.24.13",
     "postgres": "^3.4.8",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.0",
