--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-redux": "^9.2.0",
     "superjson": "^2.2.6",
     "tailwind-merge": "^3.4.0",
+    "unsplash-js": "^7.0.20",
     "zod": "^4.3.5"
   },
   "devDependencies": {
